--- a/ToDoList/app/src/main/res/values/styles.xml
+++ b/ToDoList/app/src/main/res/values/styles.xml
@@ -9,4 +9,16 @@
     <style name="Chip_selector_style" parent="Widget.Material3.Chip.Filter.Elevated">
         <item name="chipBackgroundColor">@color/chip_selector</item>
     </style>
+    <style name="Widget.App.RadioButton" parent="Widget.Material3.CompoundButton.RadioButton">
+        <item name="buttonTint">@color/button_tint</item>
+    </style>
+    <style name="Widget.App.CheckBox" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="buttonTint">@color/button_tint</item>
+        <item name="buttonIconTint">@color/button_icon_tint</item>
+    </style>
+    <style name="ToolbarTitleStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
