--- a/ToDoList/app/src/main/res/layout/custom_horizontal_calendar.xml
+++ b/ToDoList/app/src/main/res/layout/custom_horizontal_calendar.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="80sp"
     android:layout_height="100sp"
+    android:layout_marginHorizontal="10dp"
+    android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/shape_calender_item">
