--- a/ToDoList/app/src/main/res/values/themes.xml
+++ b/ToDoList/app/src/main/res/values/themes.xml
@@ -5,5 +5,9 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.ToDoList" parent="Theme.Material3.Light.NoActionBar" />
+    <style name="Theme.ToDoList" parent="Theme.Material3.Light.NoActionBar" >
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    </style>
 </resources>
